Add 2GB Ram